@@ -1,5 +1,6 @@
 v6.5
 -----
++ Added the ability to add notes to games on your wishlist
 : Fixed a bug that caused achievement sorting not to work correctly
 : Fixed active market listing total to work with new data format
 : Updated highlighting code to be more robust
